Contacts page html + css layout

--- a/about.html
+++ b/about.html
@@ -166,6 +166,19 @@
           <div class="history-item__text">Крупнейший российский дистрибьютор ProAV-оборудования и эксперт на рынке мультимедийных решений</div>
         </div>
       </div>
+
+
+
+      <br>
+      <br>
+        <h2>
+          <a href="/history.html">История</a>
+        </h2>
+      <br>
+      <br>
+
+
+
       
     </div>
   </div>
@@ -200,9 +213,15 @@
         </div>
       </div>
 
-      <h2>
-        <a href="/faces.html">Лица компании</a>
-      </h2>
+
+
+      <br>
+      <br>
+        <h2>
+          <a href="/faces.html">Лица компании</a>
+        </h2>
+      <br>
+      <br>
       
 
 
@@ -233,6 +252,7 @@
           <div class="contacts-item__ellipse">
             <img src="/images/contacts-ellipse-left.png" alt="">
           </div>
+          <a href="/contacts.html#map-section" class="map-btn">Схема проезда</a>
         </div>
         <div class="contacts-item contacts-item-right">
           <div class="contacts-item__title">Наш склад</div>
@@ -253,13 +273,12 @@
           <div class="contacts-item__ellipse">
             <img src="/images/contacts-ellipse-right.png" alt="">
           </div>
+          <a href="/contacts.html#map-section" class="map-btn">Схема проезда</a>
         </div>
       </div>
   </div>
 
 </div>
-
-
 
 <script>
   const topMenuItemActive = 7;
