--- a/contacts.html
+++ b/contacts.html
@@ -1,7 +1,81 @@
 <!--#include virtual="/parts/header.html" -->
 
-<div class="container">
-  <p>contacts</p>
+<div class="breadcrumbs">
+  <div class="container">
+    <div class="parent">
+      <a href="/">Главная</a>
+    </div>
+    <div class="separator">/</div>
+    <div class="active">Контакты</div>
+  </div>
 </div>
+
+<div class="contacts-page">
+
+  <div class="contacts-section">
+    <div class="container">
+      <div class="page-title">Контакты</div>
+      <div class="contacts">
+        <div class="contacts-item contacts-item-left">
+          <div class="contacts-item__title">Наш офис</div>
+          <div class="flex-container">
+            <div class="address ac-item">
+              <div class="ac-item__title">Адрес</div>
+              <div class="ac-item__text">г. Москва, улица,д.99</div>
+            </div>
+            <div class="address ac-item">
+              <div class="ac-item__title">Контакты</div>
+              <div class="ac-item__text">+7 999 548-88-88</div>
+              <div class="ac-item__text">info@mail.ru</div>
+            </div>
+          </div>
+          <div class="working-time-title">Режим работы</div>
+          <div class="working-time-hours">с 09:00 до 18:00</div>
+          <div class="working-time-days">Выходные дни:<br>суббота, воскресенье</div>
+          <div class="contacts-item__ellipse">
+            <img src="/images/contacts-ellipse-left.png" alt="">
+          </div>
+          <span class="map-btn">Схема проезда</span>
+        </div>
+        <div class="contacts-item contacts-item-right">
+          <div class="contacts-item__title">Наш склад</div>
+          <div class="flex-container">
+            <div class="address ac-item">
+              <div class="ac-item__title">Адрес</div>
+              <div class="ac-item__text">г. Москва, улица,д.99</div>
+            </div>
+            <div class="address ac-item">
+              <div class="ac-item__title">Контакты</div>
+              <div class="ac-item__text">+7 999 548-88-88</div>
+              <div class="ac-item__text">info@mail.ru</div>
+            </div>
+          </div>
+          <div class="working-time-title">Режим работы</div>
+          <div class="working-time-hours">с 09:00 до 18:00</div>
+          <div class="working-time-days">Выходные дни:<br>суббота, воскресенье</div>
+          <div class="contacts-item__ellipse">
+            <img src="/images/contacts-ellipse-right.png" alt="">
+          </div>
+          <span class="map-btn">Схема проезда</span>
+        </div>
+      </div>
+  </div>
+
+  <div id="map-section" class="map-section">
+    <div class="container">
+      <div class="map-item map-office">
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ad4298158ec5c1d154a9795fe568475fc0e482e0a7e451b519690e3276f536c0f&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+      </div>
+      <div class="map-item map-stock hidden">
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A929e4541d72de8c3a6051058ba20651460d126434b6272af822b6a082d679e85&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<script>
+  const topMenuItemActive = 9;
+</script>
 
 <!--#include virtual="/parts/footer.html" -->
