--- a/parts/footer.html
+++ b/parts/footer.html
@@ -32,7 +32,7 @@
         <div class="menu-title">Компания</div>
         <a href="/about.html" class="menu-item">О компании</a>
         <a href="#" class="menu-item">Как мы работаем</a>
-        <a href="#" class="menu-item">Контакты</a>
+        <a href="/contacts.html" class="menu-item">Контакты</a>
         <a href="#" class="menu-item">Вакансии</a>
       </div>
       <div class="address-wrapper">
