--- a/parts/header.html
+++ b/parts/header.html
@@ -65,7 +65,7 @@
           <a href="#" class="menu-item__link">Стать партнером</a>
         </div>
         <div class="menu-item">
-          <a href="#" class="menu-item__link">Контакты</a>
+          <a href="/contacts.html" class="menu-item__link">Контакты</a>
         </div>
       </div>
     </div>
