Category page html + css layout

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
         <div class="categories-item categories-item-square categories-item-black">
           <div class="categories-item__title">Пассивное сетевое оборудование</div>
@@ -93,7 +93,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
         <div class="categories-item categories-item-wide">
           <div class="categories-item__title">DJ оборудование</div>
@@ -103,7 +103,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
 
         <div class="categories-item categories-item-square categories-item-wide">
@@ -114,7 +114,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
         <div class="categories-item categories-item-square categories-item-black">
           <div class="categories-item__title">Интерактивное оборудование</div>
@@ -124,7 +124,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
         <div class="categories-item categories-item-square categories-item-blue">
           <div class="categories-item__title">Студийное оборудование</div>
@@ -134,7 +134,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
 
         <div class="categories-item categories-item-square categories-item-blue">
@@ -145,7 +145,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
         <div class="categories-item categories-item-square categories-item-black">
           <div class="categories-item__title">Запись и трансляция</div>
@@ -155,7 +155,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
         <div class="categories-item categories-item-wide">
           <div class="categories-item__title">Профессиональные дисплеи</div>
@@ -165,7 +165,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
 
         <div class="categories-item categories-item-wide">
@@ -176,7 +176,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
         <div class="categories-item categories-item-square categories-item-black">
           <div class="categories-item__title">Модули видеостен</div>
@@ -186,7 +186,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
         <div class="categories-item categories-item-square categories-item-blue">
           <div class="categories-item__title">All-in-One LED</div>
@@ -196,7 +196,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
 
       </div>
