--- a/catalog.html
+++ b/catalog.html
@@ -25,7 +25,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
         <div class="categories-item categories-item-square categories-item-black">
           <div class="categories-item__title">Пассивное сетевое оборудование</div>
@@ -35,7 +35,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
         <div class="categories-item categories-item-wide">
           <div class="categories-item__title">DJ оборудование</div>
@@ -45,7 +45,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
 
         <div class="categories-item categories-item-square categories-item-wide">
@@ -56,7 +56,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
         <div class="categories-item categories-item-square categories-item-black">
           <div class="categories-item__title">Интерактивное оборудование</div>
@@ -66,7 +66,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
         <div class="categories-item categories-item-square categories-item-blue">
           <div class="categories-item__title">Студийное оборудование</div>
@@ -76,7 +76,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
 
         <div class="categories-item categories-item-square categories-item-blue">
@@ -87,7 +87,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
         <div class="categories-item categories-item-square categories-item-black">
           <div class="categories-item__title">Запись и трансляция</div>
@@ -97,7 +97,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
         <div class="categories-item categories-item-wide">
           <div class="categories-item__title">Профессиональные дисплеи</div>
@@ -107,7 +107,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
 
         <div class="categories-item categories-item-wide">
@@ -118,7 +118,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
         <div class="categories-item categories-item-square categories-item-black">
           <div class="categories-item__title">Модули видеостен</div>
@@ -128,7 +128,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
         <div class="categories-item categories-item-square categories-item-blue">
           <div class="categories-item__title">All-in-One LED</div>
@@ -138,7 +138,7 @@
           <div class="circle-right-down">
             <img src="/images/circle-right-down.png" alt="">
           </div>
-          <a href="#" class="full-link"></a>
+          <a href="/category.html" class="full-link"></a>
         </div>
 
       </div>
