Product page html + css layout

--- a/product.html
+++ b/product.html
@@ -1,7 +1,318 @@
 <!--#include virtual="/parts/header.html" -->
 
-<div class="container">
-  <p>product карточка товара</p>
+<div class="breadcrumbs">
+  <div class="container">
+    <div class="parent">
+      <a href="/">Главная</a>
+    </div>
+    <div class="separator">/</div>
+    <div class="parent">
+      <a href="/catalog.html">Каталог</a>
+    </div>
+    <div class="separator">/</div>
+    <div class="active">Профессиональный дисплей для видеостен Philips 55BDL3207Х/00</div>
+  </div>
 </div>
+
+<div class="product-page">
+  <div class="container">
+    <div class="back" onclick="history.back();">
+      <img src="/images/back-left-arrow.png" class="back-image" alt="">
+      <span class="back-text">Вернуться назад</span>
+    </div>
+
+    <div class="section-title">Профессиональный дисплей для видеостен Philips 55BDL3207Х/00</div>
+
+    <div class="content-flex-container">
+      <div class="image-wrapper">
+        <div class="product-image">
+          <img src="/images/temp-product-image1.jpg" alt="">
+        </div>
+        <div class="product-gallery">
+          <div class="product-gallery-item">
+            <img src="/images/temp-product-image1.jpg" alt="">
+          </div>
+          <div class="product-gallery-item">
+            <img src="/images/temp-product-image1.jpg" alt="">
+          </div>
+        </div>
+      </div>
+
+      <div class="product-content">
+        
+        <div class="product-attributes">
+          <div class="product-attributes-item">
+            <div class="product-attributes-item__text">Артикул: </div>
+            <div class="product-attributes-item__value">889456</div>
+          </div>
+          <div class="product-attributes-item">
+            <div class="product-attributes-item__text">Бренд: </div>
+            <div class="product-attributes-item__value">Sony</div>
+          </div>
+          <div class="product-attributes-item">
+            <div class="product-attributes-item__text">Диагональ: </div>
+            <div class="product-attributes-item__value">65</div>
+          </div>
+          <div class="product-attributes-item">
+            <div class="product-attributes-item__text">Разрешение: </div>
+            <div class="product-attributes-item__value">3840х2160</div>
+          </div>
+        </div>
+
+        <div class="product-desciption-subtitle">Описание</div>
+        <div class="product-desciption">
+          <p>Потрясающая видеостена</p>
+          <p>Оцените презентации и корпоративный брендинг нового уровня. Эта видеостена Philips X-Line сделает любой контент ярче благодаря Pure Colour Pro, чтобы вы могли привлекать внимание аудитории в любых условиях использования.</p>
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="product-params">
+      <div class="product-params-subtitle">Характеристики</div>
+      <div class="grid-container">
+        <div class="product-params-item">
+          <div class="product-params-item__title">Общие характеристики</div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Артикул:</div>
+            <div class="product-params-item__value">889456</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Модель:</div>
+            <div class="product-params-item__value">55BDL3207Х/00</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Бренд:</div>
+            <div class="product-params-item__value">Philips</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Гарантия:</div>
+            <div class="product-params-item__value">36 месяцев</div>
+          </div>
+        </div>
+        <div class="product-params-item">
+          <div class="product-params-item__title">Общие характеристики</div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Артикул:</div>
+            <div class="product-params-item__value">889456</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Модель:</div>
+            <div class="product-params-item__value">55BDL3207Х/00</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Бренд:</div>
+            <div class="product-params-item__value">Philips</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Гарантия:</div>
+            <div class="product-params-item__value">36 месяцев</div>
+          </div>
+        </div>
+        <div class="product-params-item">
+          <div class="product-params-item__title">Общие характеристики</div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Артикул:</div>
+            <div class="product-params-item__value">889456</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Модель:</div>
+            <div class="product-params-item__value">55BDL3207Х/00</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Бренд:</div>
+            <div class="product-params-item__value">Philips</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Гарантия:</div>
+            <div class="product-params-item__value">36 месяцев</div>
+          </div>
+        </div>
+        <div class="product-params-item">
+          <div class="product-params-item__title">Общие характеристики</div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Артикул:</div>
+            <div class="product-params-item__value">889456</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Модель:</div>
+            <div class="product-params-item__value">55BDL3207Х/00</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Бренд:</div>
+            <div class="product-params-item__value">Philips</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Гарантия:</div>
+            <div class="product-params-item__value">36 месяцев</div>
+          </div>
+        </div>
+        <div class="product-params-item">
+          <div class="product-params-item__title">Общие характеристики</div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Артикул:</div>
+            <div class="product-params-item__value">889456</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Модель:</div>
+            <div class="product-params-item__value">55BDL3207Х/00</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Бренд:</div>
+            <div class="product-params-item__value">Philips</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Гарантия:</div>
+            <div class="product-params-item__value">36 месяцев</div>
+          </div>
+        </div>
+        <div class="product-params-item">
+          <div class="product-params-item__title">Общие характеристики</div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Артикул:</div>
+            <div class="product-params-item__value">889456</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Модель:</div>
+            <div class="product-params-item__value">55BDL3207Х/00</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Бренд:</div>
+            <div class="product-params-item__value">Philips</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Гарантия:</div>
+            <div class="product-params-item__value">36 месяцев</div>
+          </div>
+        </div>
+        <div class="product-params-item">
+          <div class="product-params-item__title">Общие характеристики</div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Артикул:</div>
+            <div class="product-params-item__value">889456</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Модель:</div>
+            <div class="product-params-item__value">55BDL3207Х/00</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Бренд:</div>
+            <div class="product-params-item__value">Philips</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Гарантия:</div>
+            <div class="product-params-item__value">36 месяцев</div>
+          </div>
+        </div>
+        <div class="product-params-item">
+          <div class="product-params-item__title">Общие характеристики</div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Артикул:</div>
+            <div class="product-params-item__value">889456</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Модель:</div>
+            <div class="product-params-item__value">55BDL3207Х/00</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Бренд:</div>
+            <div class="product-params-item__value">Philips</div>
+          </div>
+          <div class="product-params-item__row">
+            <div class="product-params-item__text">Гарантия:</div>
+            <div class="product-params-item__value">36 месяцев</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="recommend-products-section">
+    <div class="container">
+      <div class="recommend-products-section-title">Также рекомендуем</div>
+      <div class="products">
+        <div class="products-item">
+          <div class="products-item__image">
+            <a href="/product.html" class="products-item__link full-link">
+              <img src="/images/temp-product1.jpg" alt="">
+            </a>
+          </div>
+          <div class="products-item__content">
+            <a href="/product.html" class="products-item__title">Профессиональный дисплей для видеостен Philips 55BDL3207Х/00</a>
+            <div class="products-item__price">
+              <span class="value">827 300</span>
+              <span class="currency">Р</span>
+            </div>
+            <a href="/product.html" class="products-btn">
+              <span class="products-btn__text">Подробнее</span>
+              <img src="/images/circle-right-down.png" class="products-btn__image" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="products-item">
+          <div class="products-item__image">
+            <a href="/product.html" class="products-item__link full-link">
+              <img src="/images/temp-product2.jpg" alt="">
+            </a>
+          </div>
+          <div class="products-item__content">
+            <a href="/product.html" class="products-item__title">Профессиональный дисплей для видеостен Philips 55BDL3207Х/00</a>
+            <div class="products-item__price">
+              <span class="value">827 300</span>
+              <span class="currency">Р</span>
+            </div>
+            <a href="/product.html" class="products-btn">
+              <span class="products-btn__text">Подробнее</span>
+              <img src="/images/circle-right-down.png" class="products-btn__image" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="products-item">
+          <div class="products-item__image">
+            <a href="/product.html" class="products-item__link full-link">
+              <img src="/images/temp-product3.jpg" alt="">
+            </a>
+          </div>
+          <div class="products-item__content">
+            <a href="/product.html" class="products-item__title">Профессиональный дисплей для видеостен Philips 55BDL3207Х/00</a>
+            <div class="products-item__price">
+              <span class="value">827 300</span>
+              <span class="currency">Р</span>
+            </div>
+            <a href="/product.html" class="products-btn">
+              <span class="products-btn__text">Подробнее</span>
+              <img src="/images/circle-right-down.png" class="products-btn__image" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="products-item">
+          <div class="products-item__image">
+            <a href="/product.html" class="products-item__link full-link">
+              <img src="/images/temp-product4.jpg" alt="">
+            </a>
+          </div>
+          <div class="products-item__content">
+            <a href="/product.html" class="products-item__title">Профессиональный дисплей для видеостен Philips 55BDL3207Х/00</a>
+            <div class="products-item__price">
+              <span class="value">827 300</span>
+              <span class="currency">Р</span>
+            </div>
+            <a href="/product.html" class="products-btn">
+              <span class="products-btn__text">Подробнее</span>
+              <img src="/images/circle-right-down.png" class="products-btn__image" alt="">
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<script>
+  const topMenuItemActive = 0;
+</script>
 
 <!--#include virtual="/parts/footer.html" -->
