--- a/parts/footer.html
+++ b/parts/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="flex-container">
       <div class="logo">
-        <img src="/images/logo-white.png" alt="">
+        <img src="/images/logo-white.png" class="logo-img" alt="">
       </div>
       <div class="socials">
         <a href="#" class="socials-item">
