Home page responsive 768

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 <div class="news-section section">
   <div class="container">
     <div class="section-title">Новости</div>
-    <div class="news">
+    <div class="news hidden-mobile">
       <div class="news-item">
         <div class="news-item__content">
           <div class="news-item__image">
@@ -386,6 +386,59 @@
       </div>
     </div>
   </div>
+
+  <div class="news-section-slider hidden-desktop">
+    <div class="news-slider swiper">
+      <div class="swiper-wrapper">
+        <div class="news-item swiper-slide">
+          <div class="news-item__content">
+            <div class="news-item__image">
+              <img src="/images/temp-news-image1.jpg" alt="">
+            </div>
+            <div class="news-item__filter"></div>
+            <div class="news-item__date">28.02.2024</div>
+            <div class="news-item__type">статья</div>
+            <a href="/news-detail.html" class="news-item__btn">
+              <span class="news-item__text">Читать новость</span>
+              <img src="/images/circle-right-down.png" class="news-item__image" alt="">
+            </a>
+          </div>
+          <div class="news-item__title">Написать красивым шрифтом на русском и английском языке</div>
+        </div>
+        <div class="news-item swiper-slide">
+          <div class="news-item__content">
+            <div class="news-item__image">
+              <img src="/images/temp-news-image2.jpg" alt="">
+            </div>
+            <div class="news-item__filter"></div>
+            <div class="news-item__date">28.02.2024</div>
+            <div class="news-item__type">статья</div>
+            <a href="/news-detail.html" class="news-item__btn">
+              <span class="news-item__text">Читать новость</span>
+              <img src="/images/circle-right-down.png" class="news-item__image" alt="">
+            </a>
+          </div>
+          <div class="news-item__title">Может ли нейросеть сочинить текст песни онлайн? Да, нейросеть, такая как ChatGPT</div>
+        </div>
+        <div class="news-item swiper-slide">
+          <div class="news-item__content">
+            <div class="news-item__image">
+              <img src="/images/temp-news-image3.jpg" alt="">
+            </div>
+            <div class="news-item__filter"></div>
+            <div class="news-item__date">28.02.2024</div>
+            <div class="news-item__type">статья</div>
+            <a href="/news-detail.html" class="news-item__btn">
+              <span class="news-item__text">Читать новость</span>
+              <img src="/images/circle-right-down.png" class="news-item__image" alt="">
+            </a>
+          </div>
+          <div class="news-item__title">Онлайн-приложение для создания пользовательских текстовых эффектов и логотипов</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
 </div>
 
 <!-- 
@@ -405,7 +458,7 @@
 <div class="events-section">
   <div class="container">
     <div class="section-title">Мероприятия</div>
-    <div class="events">
+    <div class="events hidden-mobile">
       <div class="events-item">
         <div class="events-item__title">Где и как продвигать бизнес в 2025 году</div>
         <div class="events-item__image">
@@ -440,6 +493,46 @@
       </div>
     </div>
   </div>
+
+  <div class="events-section-slider hidden-desktop">
+    <div class="events-slider swiper">
+      <div class="swiper-wrapper">
+        <div class="events-item swiper-slide">
+          <div class="events-item__title">Где и как продвигать бизнес в 2025 году</div>
+          <div class="events-item__image">
+            <img src="/images/temp-events-image1.jpg" alt="">
+          </div>
+          <div class="events-item__filter"></div>
+          <a href="/events-detail.html" class="full-link"></a>
+        </div>
+        <div class="events-item swiper-slide">
+          <div class="events-item__title">Конференция по процессной аналитике</div>
+          <div class="events-item__image">
+            <img src="/images/temp-events-image2.jpg" alt="">
+          </div>
+          <div class="events-item__filter"></div>
+          <a href="/events-detail.html" class="full-link"></a>
+        </div>
+        <div class="events-item swiper-slide">
+          <div class="events-item__title">Цифровые решения для промышленных предприятий</div>
+          <div class="events-item__image">
+            <img src="/images/temp-events-image3.jpg" alt="">
+          </div>
+          <div class="events-item__filter"></div>
+          <a href="/events-detail.html" class="full-link"></a>
+        </div>
+        <div class="events-item swiper-slide">
+          <div class="events-item__title">Рекламный хаб Северной столицы</div>
+          <div class="events-item__image">
+            <img src="/images/temp-events-image4.jpg" alt="">
+          </div>
+          <div class="events-item__filter"></div>
+          <a href="/events-detail.html" class="full-link"></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  
 </div>
 
 <!--#include virtual="/parts/footer.html" -->
