--- a/parts/footer.html
+++ b/parts/footer.html
@@ -256,8 +256,9 @@
     </div>
   </div>
 
-  <script src="js/imask.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="/js/swiper-bundle.min.js"></script>
+  <script src="/js/imask.min.js"></script>
+  <script src="/js/script.js"></script>
 
 </body>
 </html>
