--- a/parts/header.html
+++ b/parts/header.html
@@ -7,7 +7,8 @@
   <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="images/favicon.svg" rel="icon" type="image/svg+xml" />
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
@@ -17,17 +18,17 @@
         <a href="/" class="logo">
           <img src="/images/logo.png" alt="">
         </a>
-        <a href="catalog.html" class="catalog-btn">
+        <a href="catalog.html" class="catalog-btn hidden-mobile">
           <span class="catalog-btn__text">Каталог</span>
           <img src="/images/circle-right-down.png" class="catalog-btn__image" alt="">
         </a>
-        <form class="search-form" action="">
-          <input type="text" name="search_query" class="search-input" placeholder="Поиск по каталогу">
-          <button type="submit" class="search-submit-btn">
+        <form class="search-form">
+          <input type="text" name="search_query" class="search-input " placeholder="Поиск по каталогу">
+          <button type="submit" class="search-submit-btn hidden-mobile">
             <img src="/images/search-lens.png" alt="">
           </button>
         </form>
-        <div class="header-contacts">
+        <div class="header-contacts hidden-mobile">
           <a href="#" class="tp-item telegram">
             <img src="/images/circle-telegram.png" alt="">
           </a>
@@ -36,7 +37,7 @@
           </a>
         </div>
       </div>
-      <div class="top-menu">
+      <div class="top-menu hidden-mobile">
         <div class="menu-item">
           <a href="/catalog.html" class="menu-item__link">Каталог</a>
         </div>
