About page responsive

--- a/news.html
+++ b/news.html
@@ -108,7 +108,7 @@
       </div>
 
       <ul class="pager">
-        <li class="pager-item pager-item-nav pager-item-previous">
+        <li class="pager-item pager-item-nav pager-item-previous hidden-mobile">
           <a href="#" class="pager-item-link" rel="prev">Назад</a>
         </li>
         <div class="numbers">
@@ -128,7 +128,7 @@
             <a href="#" class="pager-item-link">5</a>
           </li>
         </div>
-        <li class="pager-item pager-item-nav pager-item-next">
+        <li class="pager-item pager-item-nav pager-item-next hidden-mobile">
           <a href="#" class="pager-item-link" rel="next">Вперед</a>
         </li>
       </ul>
