--- a/parts/footer.html
+++ b/parts/footer.html
@@ -151,28 +151,28 @@
   <div class="menu-wrapper">
     <div class="menu-item">
       <div class="menu-item__image">
-        <img src="/images/house.svg" alt="">
+        <img src="/images/bottom-menu-house.svg" alt="">
       </div>
       <div class="menu-item__title">Главная</div>
       <a href="/" class="full-link"></a>
     </div>
     <div class="menu-item">
       <div class="menu-item__image">
-        <img src="/images/catalog-lens.svg" alt="">
+        <img src="/images/bottom-menu-catalog-lens.svg" alt="">
       </div>
       <div class="menu-item__title">Каталог</div>
       <a href="/catalog.html" class="full-link"></a>
     </div>
     <div class="menu-item favourite-menu-item">
       <div class="menu-item__image">
-        <img src="/images/mobile-menu-telegram.png" alt="">
+        <img src="/images/bottom-menu-telegram.svg" alt="">
       </div>
       <div class="menu-item__title">Написать</div>
       <a href="#" class="full-link"></a>
     </div>
     <div class="menu-item">
       <div class="menu-item__image">
-        <img src="/images/phone-call.svg" alt="">
+        <img src="/images/bottom-menu-phone-call.svg" alt="">
       </div>
       <div class="menu-item__title">Звонок</div>
       <a href="#" class="full-link"></a>
