--- a/publications.html
+++ b/publications.html
@@ -22,7 +22,7 @@
             <img src="/images/temp-publications-image1.jpg" alt="">
           </div>
           <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type">Статья</div>
+          <div class="ep-item__type hidden-mobile">Статья</div>
           <div class="ep-item__time">20:00 мск</div>
           <div class="ep-item__filter"></div>
         </div>
@@ -41,7 +41,7 @@
             <img src="/images/temp-publications-image2.jpg" alt="">
           </div>
           <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type">Статья</div>
+          <div class="ep-item__type hidden-mobile">Статья</div>
           <div class="ep-item__time">20:00 мск</div>
           <div class="ep-item__filter"></div>
         </div>
@@ -60,7 +60,7 @@
             <img src="/images/temp-publications-image3.jpg" alt="">
           </div>
           <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type">Статья</div>
+          <div class="ep-item__type hidden-mobile">Статья</div>
           <div class="ep-item__time">20:00 мск</div>
           <div class="ep-item__filter"></div>
         </div>
@@ -79,7 +79,7 @@
             <img src="/images/temp-publications-image4.jpg" alt="">
           </div>
           <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type">Статья</div>
+          <div class="ep-item__type hidden-mobile">Статья</div>
           <div class="ep-item__time">20:00 мск</div>
           <div class="ep-item__filter"></div>
         </div>
@@ -98,7 +98,7 @@
             <img src="/images/temp-publications-image5.jpg" alt="">
           </div>
           <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type">Статья</div>
+          <div class="ep-item__type hidden-mobile">Статья</div>
           <div class="ep-item__time">20:00 мск</div>
           <div class="ep-item__filter"></div>
         </div>
@@ -117,7 +117,7 @@
             <img src="/images/temp-publications-image6.jpg" alt="">
           </div>
           <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type">Статья</div>
+          <div class="ep-item__type hidden-mobile">Статья</div>
           <div class="ep-item__time">20:00 мск</div>
           <div class="ep-item__filter"></div>
         </div>
@@ -133,7 +133,7 @@
     </div>
 
     <ul class="pager">
-      <li class="pager-item pager-item-nav pager-item-previous">
+      <li class="pager-item pager-item-nav pager-item-previous hidden-mobile">
         <a href="#" class="pager-item-link" rel="prev">Назад</a>
       </li>
       <div class="numbers">
@@ -153,7 +153,7 @@
           <a href="#" class="pager-item-link">5</a>
         </li>
       </div>
-      <li class="pager-item pager-item-nav pager-item-next">
+      <li class="pager-item pager-item-nav pager-item-next hidden-mobile">
         <a href="#" class="pager-item-link" rel="next">Вперед</a>
       </li>
     </ul>
