--- a/events.html
+++ b/events.html
@@ -21,7 +21,7 @@
             <img src="/images/temp-events-image1.jpg" alt="">
           </div>
           <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type">Статья</div>
+          <div class="ep-item__type hidden-mobile">Статья</div>
           <div class="ep-item__time">20:00 мск</div>
           <div class="ep-item__filter"></div>
         </div>
@@ -40,7 +40,7 @@
             <img src="/images/temp-events-image2.jpg" alt="">
           </div>
           <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type">Статья</div>
+          <div class="ep-item__type hidden-mobile">Статья</div>
           <div class="ep-item__time">20:00 мск</div>
           <div class="ep-item__filter"></div>
         </div>
@@ -59,7 +59,7 @@
             <img src="/images/temp-events-image3.jpg" alt="">
           </div>
           <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type">Статья</div>
+          <div class="ep-item__type hidden-mobile">Статья</div>
           <div class="ep-item__time">20:00 мск</div>
           <div class="ep-item__filter"></div>
         </div>
@@ -78,7 +78,7 @@
             <img src="/images/temp-events-image4.jpg" alt="">
           </div>
           <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type">Статья</div>
+          <div class="ep-item__type hidden-mobile">Статья</div>
           <div class="ep-item__time">20:00 мск</div>
           <div class="ep-item__filter"></div>
         </div>
@@ -97,7 +97,7 @@
             <img src="/images/temp-events-image5.jpg" alt="">
           </div>
           <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type">Статья</div>
+          <div class="ep-item__type hidden-mobile">Статья</div>
           <div class="ep-item__time">20:00 мск</div>
           <div class="ep-item__filter"></div>
         </div>
@@ -116,7 +116,7 @@
             <img src="/images/temp-events-image6.jpg" alt="">
           </div>
           <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type">Статья</div>
+          <div class="ep-item__type hidden-mobile">Статья</div>
           <div class="ep-item__time">20:00 мск</div>
           <div class="ep-item__filter"></div>
         </div>
@@ -132,7 +132,7 @@
     </div>
 
     <ul class="pager">
-      <li class="pager-item pager-item-nav pager-item-previous">
+      <li class="pager-item pager-item-nav pager-item-previous hidden-mobile">
         <a href="#" class="pager-item-link" rel="prev">Назад</a>
       </li>
       <div class="numbers">
@@ -152,7 +152,7 @@
           <a href="#" class="pager-item-link">5</a>
         </li>
       </div>
-      <li class="pager-item pager-item-nav pager-item-next">
+      <li class="pager-item pager-item-nav pager-item-next hidden-mobile">
         <a href="#" class="pager-item-link" rel="next">Вперед</a>
       </li>
     </ul>
