--- a/parts/footer.html
+++ b/parts/footer.html
@@ -96,7 +96,19 @@
 </div>
 
 <!-- mobile menu -->
-<div class="mobile-menu">
+<div class="mobile-menu hmds">
+
+  <a href="/" class="logo">
+    <img src="/images/logo.png" alt="">
+  </a>
+
+  <form class="search-form">
+    <input type="text" name="search_query" class="search-input " placeholder="Поиск по каталогу">
+    <button type="submit" class="search-submit-btn hidden-mobile">
+      <img src="/images/search-lens.png" alt="">
+    </button>
+  </form>
+
   <ul class="menu">
     <li class="menu-item menu-item-first">
       <a href="/catalog.html" class="menu-item__link">Каталог</a>
