--- a/parts/header.html
+++ b/parts/header.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <header class="header">
+  <header class="header hmds">
     <div class="container">
       <div class="flex-container">
         <a href="/" class="logo">
