Category page responsive

--- a/category.html
+++ b/category.html
@@ -84,6 +84,8 @@
           <a href="#" class="subcategories-item">Со встроенным компьютером</a>
         </div>
 
+        <div id="filter-menu-btn" class="filter-menu-btn hidden-desktop">Фильтры</div>
+
         <div class="products">
 
           <div class="products-item">
@@ -241,7 +243,7 @@
         </div>
 
         <ul class="pager">
-          <li class="pager-item pager-item-nav pager-item-previous">
+          <li class="pager-item pager-item-nav pager-item-previous hidden-mobile">
             <a href="#" class="pager-item-link" rel="prev">Назад</a>
           </li>
           <div class="numbers">
@@ -261,7 +263,7 @@
               <a href="#" class="pager-item-link">5</a>
             </li>
           </div>
-          <li class="pager-item pager-item-nav pager-item-next">
+          <li class="pager-item pager-item-nav pager-item-next hidden-mobile">
             <a href="#" class="pager-item-link" rel="next">Вперед</a>
           </li>
         </ul>
