Filter menu html + css layout

--- a/parts/footer.html
+++ b/parts/footer.html
@@ -97,64 +97,65 @@
 
 <!-- mobile menu -->
 <div class="mobile-menu hmds">
-
-  <a href="/" class="logo">
-    <img src="/images/logo.png" alt="">
-  </a>
-
-  <form class="search-form">
-    <input type="text" name="search_query" class="search-input " placeholder="Поиск по каталогу">
-    <button type="submit" class="search-submit-btn hidden-mobile">
-      <img src="/images/search-lens.png" alt="">
-    </button>
-  </form>
-
-  <ul class="menu">
-    <li class="menu-item menu-item-first">
-      <a href="/catalog.html" class="menu-item__link">Каталог</a>
-    </li>
-    <li class="menu-item">
-      <a href="/manufacturers.html" class="menu-item__link">Производители</a>
-    </li>
-    <li class="menu-item">
-      <a href="/news.html" class="menu-item__link">Новости</a>
-    </li>
-    <li class="menu-item">
-      <a href="/events.html" class="menu-item__link">Мероприятия</a>
-    </li>
-    <li class="menu-item">
-      <a href="/publications.html" class="menu-item__link">Публикации</a>
-    </li>
-    <li class="menu-item" class="menu-item__link">
-      <a href="#">Скачать</a>
-    </li>
-    <li class="menu-item">
-      <a href="/expertise.html" class="menu-item__link">Экспертиза</a>
-    </li>
-    <li class="menu-item">
-      <a href="/about.html" class="menu-item__link">О нас</a>
-    </li>
-    <li class="menu-item">
-      <a href="#" class="menu-item__link">Стать партнером</a>
-    </li>
-    <li class="menu-item">
-      <a href="/contacts.html" class="menu-item__link">Контакты</a>
-    </li>
-  </ul>
-  <div class="socials">
-    <a href="#" class="socials-item">
-      <img src="/images/mobile-menu-telegram.png" alt="">
+  <div class="container">
+    <a href="/" class="logo">
+      <img src="/images/logo.png" alt="">
     </a>
-    <a href="#" class="socials-item">
-      <img src="/images/mobile-menu-vk.png" alt="">
-    </a>
-    <a href="#" class="socials-item">
-      <img src="/images/mobile-menu-youtube.png" alt="">
-    </a>
-  </div>
-  <div class="address-wrapper">
-    <div class="phone">+7 (999) 999 45 45</div>
-    <div class="address">г. Москва, улица, д.99</div>
+
+    <form class="search-form">
+      <input type="text" name="search_query" class="search-input " placeholder="Поиск по каталогу">
+      <button type="submit" class="search-submit-btn hidden-mobile">
+        <img src="/images/search-lens.png" alt="">
+      </button>
+    </form>
+
+    <ul class="menu">
+      <li class="menu-item menu-item-first">
+        <a href="/catalog.html" class="menu-item__link">Каталог</a>
+      </li>
+      <li class="menu-item">
+        <a href="/manufacturers.html" class="menu-item__link">Производители</a>
+      </li>
+      <li class="menu-item">
+        <a href="/news.html" class="menu-item__link">Новости</a>
+      </li>
+      <li class="menu-item">
+        <a href="/events.html" class="menu-item__link">Мероприятия</a>
+      </li>
+      <li class="menu-item">
+        <a href="/publications.html" class="menu-item__link">Публикации</a>
+      </li>
+      <li class="menu-item" class="menu-item__link">
+        <a href="#">Скачать</a>
+      </li>
+      <li class="menu-item">
+        <a href="/expertise.html" class="menu-item__link">Экспертиза</a>
+      </li>
+      <li class="menu-item">
+        <a href="/about.html" class="menu-item__link">О нас</a>
+      </li>
+      <li class="menu-item">
+        <a href="#" class="menu-item__link">Стать партнером</a>
+      </li>
+      <li class="menu-item">
+        <a href="/contacts.html" class="menu-item__link">Контакты</a>
+      </li>
+    </ul>
+    <div class="socials">
+      <a href="#" class="socials-item">
+        <img src="/images/mobile-menu-telegram.png" alt="">
+      </a>
+      <a href="#" class="socials-item">
+        <img src="/images/mobile-menu-vk.png" alt="">
+      </a>
+      <a href="#" class="socials-item">
+        <img src="/images/mobile-menu-youtube.png" alt="">
+      </a>
+    </div>
+    <div class="address-wrapper">
+      <div class="phone">+7 (999) 999 45 45</div>
+      <div class="address">г. Москва, улица, д.99</div>
+    </div>
   </div>
 </div>
 
