--- a/category.html
+++ b/category.html
@@ -274,6 +274,71 @@
   </div>
 </div>
 
+<div class="filter-menu">
+  <div class="container">
+    <div class="filter-menu-close">
+      <div class="close"></div>
+    </div>
+    <div class="filter-menu-title">Фильтры</div>
+    <form class="filter" action="#" method="get">
+      <div class="checkbox-group">
+        <div class="checkbox-group__title">Quadcopter Features</div>
+        <label class="checkbox-label">
+          <span class="custom-checkbox-text">App-Controlled</span>
+          <input type="checkbox" name="name" class="checkbox" value="">
+          <span class="custom-checkbox"></span>
+        </label>
+        <label class="checkbox-label">
+          <span class="custom-checkbox-text">Obstacle Avoidance</span>
+          <input type="checkbox" name="name" class="checkbox" value="">
+          <span class="custom-checkbox"></span>
+        </label>
+        <label class="checkbox-label">
+          <span class="custom-checkbox-text">Video Downlink Capable</span>
+          <input type="checkbox" name="name" class="checkbox" value="">
+          <span class="custom-checkbox"></span>
+        </label>
+      </div>
+
+      <div class="checkbox-group">
+        <div class="checkbox-group__title">Video Capture Resolution</div>
+        <label class="checkbox-label">
+          <span class="custom-checkbox-text">4K UHD 2160p</span>
+          <input type="checkbox" name="name" class="checkbox" value="">
+          <span class="custom-checkbox"></span>
+        </label>
+        <label class="checkbox-label">
+          <span class="custom-checkbox-text">FHD 1080p</span>
+          <input type="checkbox" name="name" class="checkbox" value="">
+          <span class="custom-checkbox"></span>
+        </label>
+        <label class="checkbox-label">
+          <span class="custom-checkbox-text">HD 720p</span>
+          <input type="checkbox" name="name" class="checkbox" value="">
+          <span class="custom-checkbox"></span>
+        </label>
+      </div>
+
+      <button type="submit" class="submit-btn primary-btn">Применить</button>
+      <a href="#" class="secondary-btn clear-btn">
+        <svg class="clear-btn__svg" width="23" height="23" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_285_758)">
+          <path d="M15 9L9 15" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M9 9L15 15" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21Z" stroke-linecap="round" stroke-linejoin="round"/>
+          </g>
+          <defs>
+          <clipPath id="clip0_285_758">
+          <rect width="24" height="24" fill="white"/>
+          </clipPath>
+          </defs>
+        </svg>
+        <span class="clear-btn__text">Сбросить</span>
+      </a>
+    </form>
+  </div>
+</div>
+
 <script>
   const topMenuItemActive = 0;
 </script>
