--- a/parts/header.html
+++ b/parts/header.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="images/favicon.svg" rel="icon" type="image/svg+xml" />
   <link rel="stylesheet" href="/css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="/css/photoswipe.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
