Product page responsive

--- a/product.html
+++ b/product.html
@@ -81,7 +81,7 @@
         <div class="product-price-text">рекомендованная розничная цена</div>
         <div class="product-price-btn">
           <span class="product-price-btn__text">Запросить цену</span>
-          <img src="/images/circle-right-down.png" alt="">
+          <img src="/images/circle-right-down.png" class="product-price-btn__image" alt="">
         </div>
       </div>
 
